<resources>
    <string name="app_name">BB Remote</string>

    <!-- Strings related to menu actions -->
    <string name="action_settings">Settings</string>
    <string name="title_activity_input">InputActivity</string>
    <string name="menu_input_modes">Input Modes</string>
    <string name="action_keyboard">Keyboard</string>
    <string name="action_touchpad">Touchpad Mouse</string>
    <string name="action_optical">Optical Mouse</string>
    <string name="action_camera">Camera</string>
    <string name="action_mic">Microphone</string>
    <string name="action_gamepad">Game Controller</string>
    <string name="action_customize">Customize Controller</string>
    <string name="menu_dual_mode">Secondary Input Mode</string>
    <string name="action_dual_mic">Background Mic</string>
    <string name="action_dual_camera">Background Camera</string>
    <string name="action_dual_none">None</string>
    <string name="action_connection">Connection</string>
    <string name="action_scan">Scan</string>
    <string name="action_add_input">Add Input</string>
    <string name="action_save_layout">Save Layout</string>
    <string name="action_load_layout">Load Layout</string>
    <string name="action_delete_layout">Delete Layout</string>
    <string name="action_delete_input">Delete Input</string>
...
